style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  box-sizing: border-box;
}
html,
body {
  height: 100%;
  width: 100%;
}
/* .container {
  height: 100vh;
} */
.navlinks {
  background-color: black;
  color: grey;
  padding-top: 2.1vh;
  padding-bottom: 2.1vh;
  padding-left: 7vw;
  gap: 0.9vw;
  display: flex;
  align-items: center;
}
.main {
  margin-left: 7vw;
  margin-right: 7vw;
  margin-top: 3vw;
}
img {
  width: 100%;
}
.buttons {
  border-radius: 5px;
}
.nav {
  padding-left: 0.5vw;
  padding-right: 0.5vw;
  opacity: 0.9;
}
.layout {
  font-size: 20px;
}
.section1 {
  padding: 7vh 4vw;
  margin-bottom: 5vh;
  background-color: #eeeeee;
  border-radius: 5px;
}
.action_button {
  color: white;
  background-color: #428bca;
  margin-top: 1vh;
  margin-bottom: 2vh;
  border: none;
  padding: 1.2vh 1vw;
  border-radius: 3px;
}
.hr {
  margin-bottom: 5vh;
  border-top: 1px solid rgb(237, 237, 241);
}
.latest_features {
  margin-bottom: 1.8vh;
}
.section3 {
  display: flex;
  gap: 2vw;
}
.section3box {
  text-align: center;
  border: 1.5px solid rgb(237, 237, 241);
  padding-bottom: 12px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 4px;
  border-radius: 3px;
  width: 21vw;
}
.feature_label {
  margin-top: 3vh;
  margin-bottom: 1.5vh;
}
.hr2 {
  border-top: 1px solid rgb(237, 237, 241);
  margin-top: 6vh;
}
.buyinfobuttons {
  padding-bottom: 10px;
  padding-top: 10px;
}
.buy_button {
  color: white;
  background-color: #428bca;
  border: none;
  padding: 1.3vh 0.7vw;
  border-radius: 3px;
}
.info_button {
  border: 1px solid rgb(237, 237, 241);
  background: white;
  padding: 1.2vh 0.6vw;
  border-radius: 3px;
}
@media only screen and (min-width: 1801px) and (max-width: 2560px) {
  .layout {
    font-size: 34px;
  }
  .heading {
    font-size: 85px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 26.5px;
  }
  .loremsection1 {
    font-size: 32px;
    opacity: 0.85;
  }
  .main {
    margin-top: 80px;
  }
  .action_button {
    margin-top: 1.5vw;
    padding: 13px 20px;
  }
  .section1 {
    padding: 95px 114px;
    margin-bottom: 54px;
  }
  .latest_features {
    font-size: 35.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 36px;
    opacity: 0.85;
  }
  .copyright {
    font-size: 27px;
    opacity: 0.8;
  }
  .loremsection3{
    margin-left: 11px;
    margin-right: 11px; 
    font-size: 27px;
    opacity: 0.8;
  }
  .hr2 {
    margin-top: 8vh;
  }
  .copyright {
    margin-top: 6vh;
    padding-bottom: 8vh;
  }
  .button {
    font-size: 25px;
  }
  .buttons {
    border-radius: 8px;
    font-size: 25px;
  }
  .info_button {
    padding: 13px 20px;
  }
  .buy_button {
    padding: 13px 20px;
  }
}
@media only screen and (min-width: 1405px) and (max-width: 1800px) {
  .layout {
    font-size: 22px;
  }
  .heading {
    font-size: 70px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 18.5px;
  }
  .loremsection1 {
    font-size: 24px;
    opacity: 0.85;
  }
  .main {
    margin-top: 78px;
  }
  .action_button {
    margin-top: 1.5vw;
    padding: 11px 13px;
  }
  .section1 {
    padding: 50px 58px;
    margin-bottom: 45px;
  }
  .latest_features {
    font-size: 27.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 28px;
    opacity: 0.85;
  }
  .copyright {
    font-size: 19px;
    opacity: 0.8;
  }
  .loremsection3{
    margin-left: 6px;
    margin-right: 6px;
    font-size: 19px;
    opacity: 0.8;
  }
  .hr2 {
    margin-top: 8vh;
  }
  .copyright {
    margin-top: 6vh;
    padding-bottom: 8vh;
  }
  .buttons {
    border-radius: 5px;
    font-size: 19px;
  }
  .info_button {
    padding: 11px 13px;
  }
  .buy_button {
    padding: 11px 13px;
  }
}
@media only screen and (min-width: 1023px) and (max-width: 1404px) {
  .layout {
    font-size: 17px;
  }
  .heading {
    font-size: 60px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 13.5px;
  }
  .loremsection1 {
    font-size: 19px;
    opacity: 0.85;
  }
  .main {
    margin-top: 60px;
  }
  .action_button {
    margin-top: 1.5vw;
    padding: 8px 9px; 
  }
  .section1 {
    padding: 46px 50px;
    margin-bottom: 38px;
  }
  .latest_features {
    font-size: 22.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 23px;
    opacity: 0.85;
  }
  .copyright {
    font-size: 14px;
    opacity: 0.8;
  }
  .loremsection3{
    margin-left: 10.6px;
    margin-right: 10.6px; 
    font-size: 14px;
    opacity: 0.8;
  }
  .hr2 {
    margin-top: 8vh;
  }
  .copyright {
    margin-top: 6vh;
    padding-bottom: 8vh;
  }
  .info_button {
    padding: 8px 9px; 
  }
  .buy_button {
    padding: 8px 9px; 
  }
  .buttons{
    font-size: 15px;
    }
}
@media only screen and (min-width: 771px) and (max-width: 1022px) {
  .layout {
    font-size: 16px;
  }
  .heading {
    font-size: 50px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 12.5px;
  }
  .loremsection1 {
    font-size: 16px;
    opacity: 0.85;
  }
  .main {
    margin-top: 30px;
  }
  .action_button {
    margin-top: 1.5vw;
    padding: 7px 9px;
  }
  .section1 {
    padding: 18px 26px;
    margin-bottom: 22px
  }
  .latest_features {
    font-size: 21.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 23px;
    opacity: 0.85;
  }
  .loremsection3 {
    font-size: 14px;
    padding-left: 10px;
    padding-right: 10px;
    opacity: 0.8;
  }
  .hr2 {
    margin-top: 5vh;
  }
  .copyright {
    font-size: 14px;
    margin-top: 5vh;
    padding-bottom: 5vh;
    opacity: 0.8;
  }
  .section3 {
    flex-wrap: wrap;
    gap: 2vw;
  }
  .section3box {
    width: 27.3vw;
  }
  .info_button {
    padding: 7px 9px;
  }
  .buy_button {
    padding: 7px 9px;
  }
}
@media only screen and (min-width: 641px) and (max-width: 770px) {
  .layout {
    font-size: 14px;
  }
  .loremsection3 {
    padding-left: 29px;
    padding-right: 29px;
    font-size: 14px;
    opacity: 0.8;
  }
  .heading {
    font-size: 40px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 11px;
  }
  .loremsection1 {
    font-size: 15px;
    opacity: 0.85;
  }
  .action_button {
    margin-top: 1.5vw;
    padding: 7px 9px;
  }
  .section1 {
    padding: 16px 22px;
    margin-bottom: 6px;
  }
  .latest_features {
    font-size: 21.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 23px;
    opacity: 0.85;
  }
  .hr2 {
    margin-top: 4vh;
  }
  .copyright {
    font-size: 14px;
    margin-top: 4vh;
    padding-bottom: 4vh;
    opacity: 0.8;
  }
  .section3 {
    flex-wrap: wrap;
    gap: 4vw;
  }
  .section3box {
    width: 41vw;
  }
  .hr {
    margin-top: 3vw;
    margin-bottom: 2vw;
  }
  .buy_button {
    padding: 7px 9px;
  }
  .info_button {
    padding: 7px 9px;
  }
  .main {
    margin-top: 30px;
  }
}
@media only screen and (min-width: 427px) and (max-width: 641px) {
  .layout {
    font-size: 14px;
  }
  .loremsection3 {
    padding-left: 11px;
    padding-right: 11px;
    font-size: 13px;
    opacity: 0.8;
  }
  .heading {
    font-size: 35px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 11px;
  }
  .loremsection1 {
    font-size: 14px;
    opacity: 0.85;
  }
  .action_button {
    margin-top: 1.5vw;
    padding: 5px 6.5px;
    font-size: 13px;
  }
  .section1 {
    padding: 16px 22px;
    margin-bottom: 6px;
  }
  .latest_features {
    font-size: 20.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 21px;
    opacity: 0.85;
  }
  .hr2 {
    margin-top: 4vh;
  }
  .copyright {
    font-size: 14px;
    margin-top: 4vh;
    padding-bottom: 4vh;
    opacity: 0.8;
  }
  .section3 {
    flex-wrap: wrap;
    gap: 4vw;
  }
  .section3box {
    width: 41vw;
  }
  .hr {
    margin-top: 3vw;
    margin-bottom: 2vw;
  }
  .buy_button {
    padding: 5px 6.5px;
    font-size: 13px;
  }
  .info_button {
    padding: 5px 6.5px;
    font-size: 13px;
  }
  .main {
    margin-top: 30px;
  }
  .navlinks{
    gap: 2vw;
  }
}
@media only screen and (min-width: 364px) and (max-width: 426px) {
  .layout {
    font-size: 15px;
  }
  .heading {
    font-size: 30px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 12.5px;
  }
  .loremsection1 {
    font-size: 12px;
    opacity: 0.85;
  }
  .main {
    margin-top: 22px;
  }
  .action_button {
    margin-top: 12px;
    padding: 6px 8px;
  }
  .section1 {
    padding: 3px 19px;
    margin-bottom: 13px;
  }
  .latest_features {
    font-size: 18.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 20px;
    opacity: 0.85;
  }
  .loremsection3 {
    font-size: 11px;
    opacity: 0.8;
    margin-left: 12vw;
    margin-right: 12vw;
    margin-bottom: 1vw;
  }
  .hr2 {
    margin-top: 2vh;
  }
  .copyright {
    font-size: 11px;
    margin-top: 3vh;
    padding-bottom: 3vh;
    opacity: 0.8;
  }
  .section3 {
    display: block;
  }
  .section3box {
    width: 100%;
    margin-bottom: 1vh;
  }
  .hr {
    margin-bottom: 1vh;
  }
  .navlinks {
    display: block;
    text-align: center;
    padding-left: 0;
  }
  .layout,
  .navlink1,
  .navlink2 {
    margin-bottom: 8px;
  }
  .buy_button {
    padding: 6px 8px;
  }
  .info_button {
    padding: 6px 8px;
  }
}
@media only screen and (max-width: 364px) {
  .layout {
    font-size: 14px;
  }
  .heading {
    font-size: 30px;
    font-weight: 500;
    margin-bottom: 1vh;
    margin-top: 2vh;
    width: fit-content;
    opacity: 0.8;
  }
  .navlink {
    font-size: 11.5px;
  }
  .loremsection1 {
    font-size: 12px;
    opacity: 0.85;
  }
  .main {
    margin-top: 22px;
  }
  .action_button {
    margin-top: 12px;
    padding: 6px 8px;
  }
  .section1 {
    padding: 2px 17px;
    margin-bottom: 13px;
  }
  .latest_features {
    font-size: 18.5px;
    opacity: 0.8;
  }
  .feature_label {
    font-size: 20px;
    opacity: 0.85;
  }
  .loremsection3 {
    font-size: 11px;
    opacity: 0.8;
    margin-left: 7vw;
    margin-right: 7vw;
    margin-bottom: 1vw;
  }
  .hr2 {
    margin-top: 2vh;
  }
  .copyright {
    font-size: 11px;
    margin-top: 3vh;
    padding-bottom: 3vh;
    opacity: 0.8;
  }
  .section3 {
    display: block;
  }
  .section3box {
    width: 100%;
    margin-bottom: 1vh;
  }
  .hr {
    margin-bottom: 1vh;
  }
  .navlinks {
    display: block;
    text-align: center;
    padding-left: 0;
  }
  .layout,
  .navlink1,
  .navlink2 {
    margin-bottom: 8px;
  }
  .buy_button {
    padding: 6px 8px;
  }
  .info_button {
    padding: 6px 8px;
  }
}

